up desk_8 and desk_10

--- a/tailwind/custom.css
+++ b/tailwind/custom.css
@@ -35,6 +35,12 @@
     width: 100%;
     /* background-color: #111827; */
 }
+.w-74-26-pt {
+    width: 74.2603550295858%;
+}
+.w-25-739-pt {
+    width: 25.7396449704142%;
+}
 .w-25-5-pt {
     width: 25.48828125%;
 }
