--- a/tailwind/tailwind.css
+++ b/tailwind/tailwind.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v2.0.3 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v2.0.4 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
@@ -31175,6 +31175,46 @@ video {
           animation: bounce 1s infinite;
 }
 
+@font-face {
+  font-family: SemiBold;
+
+  src: url(../font/Poppins/Poppins-SemiBold.ttf);
+}
+
+@font-face {
+  font-family: m_edium;
+
+  src: url(../font/Poppins/Poppins-Medium.ttf);
+}
+
+@font-face {
+  font-family: Regular;
+
+  src: url(../font/Poppins/Poppins-Regular.ttf);
+}
+
+@font-face {
+  font-family: b_old;
+
+  src: url(../font/Poppins/Poppins-Bold.ttf);
+}
+
+.semibold {
+  font-family: SemiBold;
+}
+
+.medium {
+  font-family: m_edium;
+}
+
+.regular {
+  font-family: Regular;
+}
+
+.bold {
+  font-family: b_old;
+}
+
 .g-bs {
   opacity: 0.8;
   background-image: url(/images/gird.png);
@@ -31182,8 +31222,20 @@ video {
   /* background-color: #111827; */
 }
 
+.w-74-26-pt {
+  width: 74.2603550295858%;
+}
+
+.w-25-739-pt {
+  width: 25.7396449704142%;
+}
+
 .w-25-5-pt {
   width: 25.48828125%;
+}
+
+.w-12-5-pt {
+  width: 12.5%;
 }
 
 .w-10-pt {
@@ -31222,6 +31274,10 @@ video {
   width: 67.96875%;
 }
 
+.w-66-01-pt {
+  width: 66.015625%;
+}
+
 .w-53-04-pt {
   width: 53.04878048780488%;
 }
@@ -31230,13 +31286,47 @@ video {
   width: 46.95121951219512%;
 }
 
+.w-8-49-pt {
+  width: 8.49609375%;
+}
+
+.w-57-51-pt {
+  width: 57.51953125%;
+}
+
+.w-33-98-pt {
+  width: 33.98437505%;
+}
+
+.w-15-039 {
+  width: 15.0390625%;
+}
+
+.w-84-96 {
+  width: 84.9609375%;
+}
+
 .m-ct {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.m-ct-bl {
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
 .fz-46 {
   font-size: 46px;
+}
+
+.fz-48 {
+  font-size: 48px;
+}
+
+.fz-50 {
+  font-size: 50px;
 }
 
 .fz-18 {
@@ -31263,12 +31353,36 @@ video {
   font-size: 60px;
 }
 
+.fz-70 {
+  font-size: 70px;
+}
+
+.fz-72 {
+  font-size: 72px;
+}
+
 .bg_676CDB {
+  border-color: #676cdb;
+}
+
+.bg_16A34A {
+  background-color: #16a34a;
+}
+
+.bgc_676CDB {
   border-color: #676cdb;
 }
 
 .bg_3B82F6 {
   background-color: #3b82f6;
+}
+
+.cl_3B82F6 {
+  color: #3b82f6;
+}
+
+.bg_374151 {
+  background-color: #374151;
 }
 
 .bg-1f2937 {
@@ -31279,8 +31393,32 @@ video {
   background-color: #111827;
 }
 
+.bg-D1D5DB {
+  background-color: #d1d5db;
+}
+
 .cl_60A5FA {
   color: #60a5fa;
+}
+
+.cl_FDE047 {
+  color: #fde047;
+}
+
+.bg_EAB308 {
+  background-color: #eab308;
+}
+
+.cl-EAB308 {
+  color: #eab308;
+}
+
+.cl_22C55E {
+  color: #22c55e;
+}
+
+.mr-left-30px {
+  margin-left: 30px;
 }
 
 .overlay {
@@ -31288,10 +31426,20 @@ video {
   bottom: 0;
   right: 0;
   background: linear-gradient(to right, rgba(255, 0, 0, 0), #000000);
-  width: 80%;
+  width: 100%;
   height: 100%;
   opacity: 1;
   border-radius: 59px;
+}
+
+.overlay_desk_3 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(to right, #000000, rgba(255, 0, 0, 0));
+  width: 62.8125%;
+  height: 100%;
+  opacity: 1;
 }
 
 .cl-22C55E {
@@ -31300,6 +31448,69 @@ video {
 
 .cl-EF4444 {
   color: #ef4444;
+}
+
+.vh50 {
+  height: 50vh;
+}
+
+.cl-bt:hover {
+  border-bottom: #676cdb solid 1px;
+}
+
+.slidecontainer {
+  width: 100%;
+}
+
+.slider {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-appearance: none;
+  width: 95%;
+  height: 25px;
+  background-color: transparent;
+  background: red;
+  outline: none;
+  opacity: 0.7;
+  transition: opacity 0.2s;
+}
+
+.slider-line {
+  position: absolute;
+  height: 0.5rem;
+  width: 100%;
+  right: 0px;
+  top: 1rem;
+  background: rgb(255, 92, 78);
+  border-radius: 100px;
+  overflow: hidden;
+  box-shadow: rgb(41, 57, 70) 0px 0px 0px 1.25rem;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 50px;
+  height: 50px;
+  background: #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4caf50;
+  cursor: pointer;
+}
+
+.aaa {
+  vertical-align: middle;
 }
 
 @media (min-width: 640px) {
