--- a/tailwind/custom.css
+++ b/tailwind/custom.css
@@ -104,6 +104,9 @@
 .w-25-4888-pt {
     width: 25.48828125%;
 }
+.w-23-535-pt {
+    width: 23.53515625%;
+}
 .m-ct {
     margin-left: auto;
     margin-right: auto;
